...
        let fileExtension = file.pathExtension

        for bundle in bundles {
            let candidates = [
                bundle.url(forResource: resourceName, withExtension: fileExtension),
                bundle.url(forResource: fileName, withExtension: nil),
                bundle.url(forResource: resourceName, withExtension: fileExtension, subdirectory: "Resources/Font"),
                bundle.url(forResource: resourceName, withExtension: fileExtension, subdirectory: "Font")
            ]
            if let url = candidates.compactMap({ $0 }).first(where: { (try? $0.checkResourceIsReachable()) == true }) {
                return url
            }
        }
...
